# Ergolearn-AI

./: .gitignore  README.md  full-run  package-lock.json  package.json  test-run
src-frontend/: app.js  index.html  style.css
src-python/: biomechanics.py  ergolearn-backend.spec  generate_icons.py  insights.py  main.py  make_transparent.py  pose_engine.py  requirements.txt  seed_data.py  test_backend.py  test_camera.py  test_insights.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
